@@ -88,6 +88,7 @@ SVN trunk (1.1+svn):
    * added a optional random_leader= tag inside a [multiplayer_side] to
      specify a different list of randomly selectable leaders
    * added level as a possible argument for standard unit [filter]
+   * terrain can be given a "light" flag to specify local light modification
  * music:
    * support for more than one music file per scenario with adjustable spacing
  * Miscellaneous
